# sdwpf-ml-time-serie

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/france/odre/: courbes-de-production-mensuelles-eolien-solaire-complement-de-remuneration.csv
data/france/open_meteo/: open_meteo_archive_headers.txt  open_meteo_archive_sample.json  open_meteo_fetch_meta.txt  open_meteo_wind_hourly_2020_2025.csv
docs/: DOMAINE_ET_PRATIQUES.md  GUIDE.md  INVENTAIRE_FICHIERS.md  PLAN.md  PUBLICATION_GITHUB.md
docs/assets/: README.md
scripts/: CONTEXTE_POUR_CHATGPT.md  clean_artifacts.py  download_wind_toolkit_nlr.py  fetch_open_meteo_wind.py  reproduce_meteo_figures.py  sdwpf_benchmark.py  sdwpf_explore.py  sdwpf_paths.py  sdwpf_visualize.py  sdwpf_walkforward.py
src/sdwpf/: __init__.py  cli_common.py  constants.py  data.py  features.py  kpi_format.py  paths.py  pipeline.py
tests/: test_sdwpf_data.py  test_sdwpf_features.py  test_sdwpf_pipeline.py
